--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,13 +31,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22.11.0'
+      - name: Install Dependencies
+        run: npm install
+      - name: Build Tailwind CSS
+        run: npm run build:tailwind
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          path: 'css/tailwind-build.css'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
